Fix z-index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -88,4 +88,5 @@
 	position: absolute;
 	top: 18px;
 	right: 15px;
+	z-index: 10001;
 }
